# vine-verifiers

./: .gitignore  pyproject.toml  run.sh  run_with_accelerate.py  train_vineppo.sh  train_vineppo_mcts.sh
.ipynb_checkpoints/: train_vineppo-checkpoint.sh
docs/: VLLM_SERVER_TRAINING_GUIDE.md
kk_dataset_cache/: kk_dataset_sdefault_cdefault_tr3600_ev90_te90.pkl
verifiers/: __init__.py
verifiers/envs/: __init__.py  environment.py  imprisoned_gym_env.py  multistep_env.py  multistep_env_old.py  simple_env.py  two_treasures_maze_gym_env.py
verifiers/envs/imprisoned/: README.md  explore_table.py  fix_missing_states_and_references.py  game.py  imprisoned.yaml  imprisoned_env.py  imprisoned_multistep_env.py  path_analyzer.py  q_table.pkl  qlearning_agent.py  text_game_rubric.py
verifiers/envs/knight_and_knaves/: __init__.py  kk_env.py  kk_simple_env.py  kk_verification.py  knights_and_knaves.py
verifiers/examples/: gsm8k_calculator.py  gsm8k_calculator_demo.py  imprisoned_demo.py  knights_knaves_simple.py  train_vineppo.py  train_vineppo_mcts.py  two_treasures_maze_demo.py
verifiers/inference/: vllm_serve.py
verifiers/models/: model_utils.py
verifiers/prompts/: system_prompts.py
verifiers/trainers/: grpo_env_trainer.py  sequential_sampler.py  vine_buffer.py  vine_buffer_mcts.py  vine_ppo.py  vine_ppo_mcts.py
verifiers/utils/: config_utils.py  model_utils.py  training_utils.py  vllm_client.py
