[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = "==3.11.*"
dependencies = [
    "torch",
    "setuptools",
    "deepspeed==0.16.3",
    "accelerate",
    "peft",
    "wandb",
    "rich",
    "tensorboardX",
    "matplotlib",
    "duckduckgo-search",
    "trl @ git+https://github.com/huggingface/trl.git@a34987956cd5bf08ed7501da2510b9404bede695",
    "liger-kernel>=0.5.2",
    "vllm>=0.7.3",
    "brave-search>=0.1.8",
    "gymnasium>=1.1.1",
    "z3-solver>=4.14.0.0",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "transformers",
]
